[tool.poetry]
name = "smartpost"
version = "0.1.0"
description = "Python library to interact with Itella Smartpost API"
authors = ["Rao Zvorovski <rao.zvorovski@codeduf.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.33.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
